# socket_1_cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: toolchain.cmake
include/: tcp_client.hpp  tcp_server.hpp
src/: main.cpp  tcp_client.cpp  tcp_server.cpp
